--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <module>customer</module>
     <module>fraud</module>
     <module>eureka-server</module>
-<!--    <module>clients</module>-->
+    <module>clients</module>
   </modules>
 
   <name>ezeservices</name>
@@ -23,9 +23,9 @@
     <maven.compiler.source>17</maven.compiler.source>
     <maven.compiler.target>17</maven.compiler.target>
     <spring.boot.maven.plugin.version>2.5.7</spring.boot.maven.plugin.version>
-    <spring.boot.dependencies.version>2.5.7</spring.boot.dependencies.version>
+    <spring.boot.dependencies.version>2.6.7</spring.boot.dependencies.version>
     <spring.cloud-version>2021.0.3</spring.cloud-version>
-<!--    <openfeign.version>4.0.0</openfeign.version>-->
+    <openfeign.version>4.0.0</openfeign.version>
   </properties>
 
   <dependencyManagement>
@@ -36,6 +36,13 @@
         <version>${spring.boot.dependencies.version}</version>
         <scope>import</scope>
         <type>pom</type>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-dependencies</artifactId>
+        <version>${spring.cloud-version}</version>
+        <type>pom</type>
+        <scope>import</scope>
       </dependency>
     </dependencies>
   </dependencyManagement>
@@ -49,17 +56,10 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-test</artifactId>
     </dependency>
-<!--    <dependency>-->
-<!--      <groupId>org.springframework.cloud</groupId>-->
-<!--      <artifactId>spring-cloud-starter-openfeign</artifactId>-->
-<!--      <version>${openfeign.version}</version>-->
-<!--    </dependency>-->
     <dependency>
       <groupId>org.springframework.cloud</groupId>
-      <artifactId>spring-cloud-dependencies</artifactId>
-      <version>${spring.cloud-version}</version>
-      <type>pom</type>
-      <scope>import</scope>
+      <artifactId>spring-cloud-starter-openfeign</artifactId>
+      <version>${openfeign.version}</version>
     </dependency>
   </dependencies>
 
